<resources>
    <string name="notification_channel_default_id">Default</string>
    <string name="notification_channel_default_name">Notification</string>
    <string name="sharedpref_MyPrefs">MyPrefs</string>
    <string name="sharedpref_token_firebase">TOKEN_FIREBASE</string>
    <string name="sharedpref_token_firebase_first">TOKEN_FIREBASE_FIRST</string>
    <string name="warning_permission_location">Location Permission Needed</string>
    <string name="warning_permission_camera">Camera Permission Needed</string>
    <string name="warning_permission_read">Read Storage Permission Needed</string>
    <string name="warning_permission_write">Write Storage Permission Needed</string>
    <string name="permission_dialog">Accessing Location Permissions required</string>
    <string name="go_to_permissions_settings">Go to App settings and enable permissions</string>
    <string name="text_jenis_kelamin">Jenis Kelamin</string>
    <string name="text_warga_negara">Warga Negara</string>
    <string name="text.pria">Pria</string>
    <string name="text.wanita">Wanita</string>
    <string name="text.wni">WNI</string>
    <string name="text.wna">WNA</string>
    <string name="text_status_pernikahan">Status Pernikahan</string>
    <string name="text.cerai">Cerai</string>
    <string name="text.menikah">Menikah</string>
    <string name="text.lajang">Lajang</string>
    <string name="text.janda">Janda</string>
    <string name="text.status_rumah">Status Rumah</string>
    <string name="text.alamat_tinggal">Alamat Tinggal</string>
    <string name="text.alamat_ktp">Alamat KTP</string>
    <string name="text.sendiri">Sendiri</string>
    <string name="text.kontrak">Kontrak</string>
    <string name="text.kost">Kost</string>
    <string name="text.keluarga">Keluarga</string>
    <string name="text.perusahaan">Perusahaan</string>
    <string name="text.sewa">Sewa</string>
    <string name="text.kpr">KPR</string>
    <string name="text.pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="text.agama">Agama</string>
    <string name="text.diploma1">D1</string>
    <string name="text.diploma2">D2</string>
    <string name="text.diploma3">D3</string>
    <string name="text.strata1">S1</string>
    <string name="text.strata2">S2</string>
    <string name="text.strata3">S3</string>
    <string name="text.sd">SD</string>
    <string name="text.sltp">SLTP</string>
    <string name="text.slta">SLTA</string>
    <string name="text.ts">Tidak Sekolah</string>
    <string name="text.islam">Islam</string>
    <string name="text.katholik">Katholik</string>
    <string name="text.kristen">Kristen</string>
    <string name="text.hindu">Hindu</string>
    <string name="text.budha">Budha</string>
    <string name="text.jenis_pekerjaan">Jenis Pekerjaan</string>
    <string name="text.isaffiliate">Is Affiliate with PP</string>
    <string name="text.status_pekerjaan">Status Pekerjaan</string>
    <string name="text.karyawan">Karyawan</string>
    <string name="text.profesional">Profesional</string>
    <string name="text.wiraswasta">Wiraswasta</string>
    <string name="text.pegawai_tetap">Pegawai Tetap</string>
    <string name="text.pegawai_tidak_tetap">Pegawai Tidak Tetap</string>
    <string name="text.sumber_penghasilan_lain">Sumber Penghasilan Lain</string>
    <string name="text.suami_istri">Suami/Istri</string>
    <string name="text.usaha_lain">Usaha lain</string>
    <string name="text.asuransi_agunan">Asuransi Agunan</string>
    <string name="text.angsuran_pertama">Pembayaran Pertama</string>
    <string name="text.is_personal_accident">Is Personal Accident</string>
    <string name="text.addb">Arrear</string>
    <string name="text.addm">Advance</string>
    <string name="text.tlo">TLO</string>
    <string name="text.all_risk">All Risk</string>
    <string name="text.yes">YES</string>
    <string name="text.no">NO</string>
    <string name="text.jenis_kendaraan">Jenis Kendaraan</string>
    <string name="text.bebek">Bebek</string>
    <string name="text.sport">Sport</string>
    <string name="text.skuter">Skuter</string>
    <string name="text.status_kendaraan">Status Kendaraan</string>
    <string name="text.baru">Baru</string>
    <string name="text.bekas">Bekas</string>
    <string name="text.cara_pembayaran_angsuran">Cara Pembayaran Angsuran</string>
    <string name="text.tunai">Tunai</string>
    <string name="text.pickup">Pickup</string>
    <string name="text.transfer">Transfer</string>
    <string name="text.payment_point">Payment Point</string>
    <string name="text.pdc">PDC</string>
    <string name="text.alamat_korespondensi">Alamat Korespondensi</string>
    <string name="text.rumah_tinggal_sekarang">Rumah Tinggal Sekarang</string>
    <string name="text.kantor_tempat_usaha">Kantor/Tempat Usaha</string>
    <string name="text.status_pelanggan">Status Pelanggan</string>
    <string name="text.repeat_order">Repeat Order</string>
    <string name="text.additional_order">Additional Order</string>
    <string name="text.tujuan_pembiayaan">Tujuan Pembiayaan</string>
    <string name="text.multiguna">Multiguna</string>
    <string name="text.modal_kerja">Modal Kerja</string>
    <string name="text.metode_penjualan">Metode Penjualan</string>
    <string name="text.indirect">Indirect</string>
    <string name="text.inhouse">Inhouse</string>
    <string name="text.direct">Direct</string>
    <string name="text.ubah_password">Ubah Password</string>
    <string name="text.password_lama">Password Lama</string>
    <string name="text.password_baru">Password Baru</string>
    <string name="text.konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="text.ubah_password_uc">UBAH PASSWORD</string>
    <string name="text.new_pass_confirm_must_match">Password Baru dan Konfirmasi Password Baru harus sama</string>
    <string name="text.nama_lengkap">Nama Lengkap</string>
    <string name="text.nama_pada_identitas">Nama pada Identitas</string>
    <string name="text.no_ktp">No. KTP</string>
    <string name="text.no_kk">No. KK</string>
    <string name="text.no_npwp">No. NPWP</string>
    <string name="text.tanggal_terbit_ktp">Tanggal Terbit KTP</string>
    <string name="text.gender">Gender</string>
    <string name="text.tempat_lahir">Tempat Lahir</string>
    <string name="text.tanggal_lahir">Tanggal Lahir</string>
    <string name="text.nama_gadis_ibu_kandung">Nama Gadis Ibu Kandung</string>
    <string name="text.pendidikan">Pendidikan</string>
    <string name="text.tinggal_sejak_tahun">Tinggal Sejak (Tahun)</string>
    <string name="text.tinggal_sejak_bulan">Tinggal Sejak (Bulan)</string>
    <string name="text.jumlah_tanggungan">Jumlah Tanggungan</string>
    <string name="text.nomor_handphone">Nomor Handphone</string>
    <string name="text.email">Email</string>
    <string name="text.nama_pasangan">Nama Pasangan</string>
    <string name="text.no_ktp_pasangan">No KTP</string>
    <string name="text.handphone_pasangan">Handphone</string>
    <string name="text.tempat_lahir_pasangan">Tempat Lahir</string>
    <string name="text.tanggal_lahir_pasangan">Tanggal Lahir</string>
    <string name="text.alamat">Alamat</string>
    <string name="text.rt">RT</string>
    <string name="text.rw">RW</string>
    <string name="text.provinsi">Provinsi</string>
    <string name="text.kota">Kota</string>
    <string name="text.kecamatan">Kecamatan</string>
    <string name="text.kelurahan">Kelurahan</string>
    <string name="text.kode_pos">Kode Pos</string>
    <string name="text.area_phone">Area Phone</string>
    <string name="text.phone">Phone</string>
    <string name="text_mobile_phone_number">Mobile Phone Number</string>
    <string name="text.hubungan_dengan_kerabat">Hubungan dengan Kerabat</string>
    <string name="text.phone_rumah">Phone (Rumah)</string>
    <string name="text.phone_kantor">Phone (Kantor)</string>
    <string name="text.area_phone_rumah">Area Phone (Rumah)</string>
    <string name="text.area_phone_kantor">Area Phone (Kantor)</string>
    <string name="text.nama_perusahaan">Nama Perusahaan</string>
    <string name="text.bekerja_sejak">Bekerja Sejak</string>
    <string name="text.profesi">Profesi</string>
    <string name="text.job_type">Job Type</string>
    <string name="text.job_position">Job Position</string>
    <string name="text.industri">Industri</string>
    <string name="text.penghasilan_tetap">Penghasilan Tetap</string>
    <string name="text.penghasilan_lain">Penghasilan Lain</string>
    <string name="text.penghasilan_pasangan">Penghasilan Pasangan</string>
    <string name="text.biaya_hidup">Biaya Hidup</string>
    <string name="text.counterpart">Counterpart</string>
    <string name="text.debt_business_scale">Debt Business Scale</string>
    <string name="text.debt_business_group">Debt Business Group</string>
    <string name="text.is_affiliate_with_pp">Is Affiliate with PP</string>
    <string name="text.nama_bank_kartu_kredit">Nama Bank</string>
    <string name="text.no_kartu_kredit">No Kartu</string>
    <string name="text.jenis_kartu_kredit">Jenis Kartu</string>
    <string name="text.limit_kartu_kredit">Limit Kredit</string>
    <string name="hint_no_ktp">Nomor KTP</string>
    <string name="hint_tanggal_lahir">Tanggal lahir</string>
    <string name="tv_persetujuan_tidak_cancel">PERSETUJUAN TIDAK CANCEL</string>
    <string name="ok_persetujuan">OK</string>
    <string name="isi_persetujuan">
        <table>\r\n\t<tbody>\r\n\t\t<tr>\r\n\t\t\t<td>\r\n\t\t\t<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas feugiat consequat diam. Maecenas metus. Vivamus diam purus, cursus a, commodo non, facilisis vitae, nulla. Aenean dictum lacinia tortor. Nunc iaculis, nibh non iaculis aliquam, orci felis euismod neque, sed ornare massa mauris sed velit. Nulla pretium mi et risus. Fusce mi pede, tempor id, cursus ac, ullamcorper nec, enim. Sed tortor. Curabitur molestie. Duis velit augue, <strong>condimentum at, ultrices a, luctus ut, orci. Donec pellentesque egestas eros. Integer cursus, augue in cursus faucibus, eros pede bibendum sem, in tempus tellus justo quis ligula. Etiam eget tortor</strong>.</p>\r\n\r\n\t\t\t<ul>\r\n\t\t\t\t<li>Vestibulum rutrum, est ut placerat elementum, lectus nisl aliquam velit, tempor aliquam eros nunc nonummy metus.</li>\r\n\t\t\t\t<li>In eros metus, gravida a, gravida sed, lobortis id, turpis. Ut ultrices, ipsum at venenatis fringilla, sem nulla lacinia tellus, eget aliquet turpis mauris non enim. Nam turpis. Suspendisse lacinia. Curabitur ac tortor ut ipsum egestas elementum. Nunc imperdiet gravida mauris.</li>\r\n\t\t\t</ul>\r\n\t\t\t</td>\r\n\t\t</tr>\r\n\t</tbody>\r\n</table>\r\n
    </string>
    <string name="cb_persetuan_tidak_cancel">Saya Mengerti</string>
    <string name="tv_syarat_ketentuan_title"><![CDATA[SYARAT & KETENTUAN]]></string>
    <string name="tv_pilihan_cabang">Cabang</string>
    <string name="tv_title_Ignore_reason">PENOLAKAN PENGAJUAN</string>
    <string name="rb_area_tidak_terjangkau">Area Tidak Terjangkau</string>
    <string name="rb_tidak_bisa_dihubungi">Kreditur Tidak Bisa Di Hubungi</string>
    <string name="rb_order_ganda">Order Ganda</string>
    <string name="rb_lainnya">Lainnya</string>
    <string name="title_permberitahuan">Pemberitahuan</string>
    <string name="txt_catatan">Catatan</string>
    <string name="hide_msg_validasi_awal_ktp">Please Show Field KTP</string>
    <string name="hide_msg_validasi_awal_tgl_lahir">Please Show Field Date of Birth</string>
    <string name="hide_msg_validasi_awal_phone_number">Please Show Field Phone Number</string>
    <string name="hide_msg_validasi_awal_branch">Please Show Field Branch</string>
    <string name="txt_no_perjanjian">No. Perjanjian</string>
    <string name="txt_waktu_keterlambatan">Waktu Keterlambatan</string>
    <string name="txt_jumlah_denda">Jumlah Denda</string>
    <string name="txt_pesan">Pesan</string>
</resources>