<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="@string/tv_title_Ignore_reason"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8dp">

            <RadioGroup
                android:id="@+id/rg_ignore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_area_ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_area_tidak_terjangkau" />

                <RadioButton
                    android:id="@+id/rb_tidak_bisa_dihubungi_ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_tidak_bisa_dihubungi" />

                <RadioButton
                    android:id="@+id/rb_order_ganda_ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_order_ganda" />

                <RadioButton
                    android:id="@+id/rb_lainnya_ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_lainnya" />

            </RadioGroup>

            <EditText
                android:id="@+id/edt_lainnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="text"
                android:maxLines="5"
                android:padding="@dimen/dimen_8dp"
                android:maxLength="100"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_error_kosong_ignore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="*Tidak Boleh kosong"
                android:textStyle="italic"
                android:visibility="gone"/>

        </LinearLayout>

        <View style="@style/Divider" />

        <Button
            android:id="@+id/btn_submit_ignore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button.submit"
            android:textColor="@android:color/white" />

    </LinearLayout>


</android.support.v7.widget.CardView>