<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">


        <ScrollView
            android:id="@+id/sv_main_persetujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fl_next_persetujuan"
            android:padding="@dimen/dimen_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_persetujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:gravity="center"
                    android:text="@string/tv_persetujuan_tidak_cancel"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_isi_persetujuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_persetujuan" />

                <CheckBox
                    android:id="@+id/cbx_persetujuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/cb_persetuan_tidak_cancel"
                    android:textSize="@dimen/text_small_body" />
            </LinearLayout>

        </ScrollView>
        <FrameLayout
            android:id="@+id/fl_next_persetujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_ok_persetujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_gray"
                android:text="@string/ok_persetujuan"
                android:textColor="@android:color/white"
                android:enabled="false"/>
        </FrameLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>
