<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:padding="16dp">


        <ScrollView
            android:id="@+id/sv_main_syarat"
            android:layout_above="@+id/fl_next_syarat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_syarat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:text="@string/tv_syarat_ketentuan_title"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_isi_syarat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_persetujuan"/>

                <CheckBox
                    android:id="@+id/cbx_syarat"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_persetuan_tidak_cancel"
                    android:textSize="@dimen/text_small_body"/>
            </LinearLayout>

        </ScrollView>
        <FrameLayout
            android:id="@+id/fl_next_syarat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_ok_syarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_gray"
                android:text="@string/ok_persetujuan"
                android:textColor="@android:color/white"
                android:enabled="false"/>
        </FrameLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>
