<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_take_foto_validasi_awal"
        android:layout_width="@dimen/dimen_128dp"
        android:layout_height="@dimen/dimen_128dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@drawable/bg_border"
        android:clickable="true"
        android:visibility="gone"
        app:cardUseCompatPadding="true">


        <ImageView
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_take_camera" />

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_4dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_no_ktp_validasi_awal"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_no_ktp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_tgl_lahir_validasi_awal"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_tanggal_lahir"
                android:longClickable="false" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_no_hp_validasi_awal"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint.no_hp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="13" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ln_cabang_validasi_awal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_pilihan_cabang"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spn_pilihan_cabang_validasi_awal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pilihan_cabang"
                android:paddingBottom="@dimen/dimen_8dp"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingRight="@dimen/dimen_4dp"
                android:paddingTop="@dimen/dimen_8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_warning_no_ktp_pribadi_validasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:text="@string/hide_msg_validasi_awal_ktp"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_warning_tanggal_lahir_pribadi_validasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:text="@string/hide_msg_validasi_awal_tgl_lahir"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_warning_handphone_pribadi_validasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:text="@string/hide_msg_validasi_awal_phone_number"
            android:textColor="@color/red"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_warning_pilihan_cabang_validasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:text="@string/hide_msg_validasi_awal_branch"
            android:textColor="@color/red"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
