<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_title_syarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/tv_syarat_ketentuan_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_isi_syarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isi_persetujuan"/>

            <CheckBox
                android:id="@+id/cbx_syarat"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/cb_persetuan_tidak_cancel"
                android:textSize="@dimen/text_small_body"/>
        </LinearLayout>



        <Button
            android:id="@+id/btn_ok_syarat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="OK"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.v7.widget.CardView>



